Sync all content

--- a/content/resources/2-96f12.md
+++ b/content/resources/2-96f12.md
@@ -12,7 +12,9 @@ image_metadata:
   credit: Figure by Professor Jung-Hoon Chun.
   image-alt: A diagram that shows the Stage-Gate process in which a project is divided
     into stages or phases that are separated by gates.
+learning_resource_types: []
 resourcetype: Image
 title: 2-96f12.jpg
+type: OCWImage
 uid: aac89186-8c06-653e-cc96-bcb25398741c
 ---
