--- a/content/resources/2-96f12-th.md
+++ b/content/resources/2-96f12-th.md
@@ -12,7 +12,9 @@ image_metadata:
   credit: ''
   image-alt: A diagram that shows the Stage-Gate process in which a project is divided
     into stages or phases that are separated by gates.
+learning_resource_types: []
 resourcetype: Image
 title: 2-96f12-th.jpg
+type: OCWImage
 uid: 4a6bb998-1ea5-3edf-cd67-a1b1ea4bec32
 ---
