--- a/content/resources/mit2_96f12_lec03.md
+++ b/content/resources/mit2_96f12_lec03.md
@@ -3,7 +3,12 @@ content_type: resource
 description: This resource contains information regarding financials I.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/2-96-management-in-engineering-fall-2012/b36f916ecee78f137958baf50b648656_MIT2_96F12_lec03.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: Financials I
+type: OCWFile
 uid: b36f916e-cee7-8f13-7958-baf50b648656
 ---
