--- a/content/resources/mit2_96f12_lec07.md
+++ b/content/resources/mit2_96f12_lec07.md
@@ -3,7 +3,12 @@ content_type: resource
 description: This resource contains information regarding financials III.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/2-96-management-in-engineering-fall-2012/1b89e9613cb702ccc54604567974894f_MIT2_96F12_lec07.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: Financials III
+type: OCWFile
 uid: 1b89e961-3cb7-02cc-c546-04567974894f
 ---
