--- a/content/resources/mit2_96f12_lec19.md
+++ b/content/resources/mit2_96f12_lec19.md
@@ -3,7 +3,12 @@ content_type: resource
 description: This resource contains information regarding HP printer case.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/2-96-management-in-engineering-fall-2012/de0ae049ec78229eeea82bd049366618_MIT2_96F12_lec19.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: HP Printer Case
+type: OCWFile
 uid: de0ae049-ec78-229e-eea8-2bd049366618
 ---
