--- a/content/resources/mit2_96f12_lec20.md
+++ b/content/resources/mit2_96f12_lec20.md
@@ -3,7 +3,12 @@ content_type: resource
 description: This resource contains information regarding strategic planning of R&D.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/2-96-management-in-engineering-fall-2012/223fdaa1fdaae37985135fda52f3dd96_MIT2_96F12_lec20.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: Strategic Planning of R&D
+type: OCWFile
 uid: 223fdaa1-fdaa-e379-8513-5fda52f3dd96
 ---
