--- a/content/resources/mit2_96f12_qs2q4.md
+++ b/content/resources/mit2_96f12_qs2q4.md
@@ -4,7 +4,12 @@ description: This resource contains information regarding background calculation
   for quiz solutions.
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/2-96-management-in-engineering-fall-2012/e7a8cf4a9c435798c681964c5ae71048_MIT2_96F12_qs2Q4.xlsx
 file_type: application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
+learning_resource_types:
+- Exams
+parent_title: Exams
+parent_type: CourseSection
 resourcetype: Other
 title: MIT2_96F12_qs2Q4.xlsx
+type: OCWFile
 uid: e7a8cf4a-9c43-5798-c681-964c5ae71048
 ---
