--- a/content/resources/2-96f12-th.md
+++ b/content/resources/2-96f12-th.md
@@ -13,6 +13,7 @@ image_metadata:
   image-alt: A diagram that shows the Stage-Gate process in which a project is divided
     into stages or phases that are separated by gates.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 2-96f12-th.jpg
 uid: 4a6bb998-1ea5-3edf-cd67-a1b1ea4bec32
